feat: add created_at to ideas dto
